solved image stretching issue on safari

--- a/web-react/src/index.css
+++ b/web-react/src/index.css
@@ -186,6 +186,7 @@
 
 .profile-img {
   width: 200px;
+  height: intrinsic;
 }
 
 .img-search {
